src/core/jit/synth/snapshots/tailcall__core__jit__synth__synth_borrow__tests__json_placeholder.snap
---
source: src/core/jit/synth/synth_borrow.rs
expression: "serde_json::to_string_pretty(&val).unwrap()"
---
{
  "posts": [
    {
      "id": 1,
      "title": "sunt aut facere repellat provident occaecati excepturi optio reprehenderit",
      "userId": 1,
      "user": null
    },
    {
      "id": 2,
      "title": "qui est esse",
      "userId": 1,
      "user": null
    },
    {
      "id": 3,
      "title": "ea molestias quasi exercitationem repellat qui ipsa sit aut",
      "userId": 1,
      "user": null
    },
    {
      "id": 4,
      "title": "eum et est occaecati",
      "userId": 1,
      "user": null
    },
    {
      "id": 5,
      "title": "nesciunt quas odio",
      "userId": 1,
      "user": null
    },
    {
      "id": 6,
      "title": "dolorem eum magni eos aperiam quia",
      "userId": 1,
      "user": null
    },
    {
      "id": 7,
      "title": "magnam facilis autem",
      "userId": 1,
      "user": null
    },
    {
      "id": 8,
      "title": "dolorem dolore est ipsam",
      "userId": 1,
      "user": null
    },
    {
      "id": 9,
      "title": "nesciunt iure omnis dolorem tempora et accusantium",
      "userId": 1,
      "user": null
    },
    {
      "id": 10,
      "title": "optio molestias id quia eum",
      "userId": 1,
      "user": null
    },
    {
      "id": 11,
      "title": "et ea vero quia laudantium autem",
      "userId": 2,
      "user": null
    },
    {
      "id": 12,
      "title": "in quibusdam tempore odit est dolorem",
      "userId": 2,
      "user": null
    },
    {
      "id": 13,
      "title": "dolorum ut in voluptas mollitia et saepe quo animi",
      "userId": 2,
      "user": null
    },
    {
      "id": 14,
      "title": "voluptatem eligendi optio",
      "userId": 2,
      "user": null
    },
    {
      "id": 15,
      "title": "eveniet quod temporibus",
      "userId": 2,
      "user": null
    },
    {
      "id": 16,
      "title": "sint suscipit perspiciatis velit dolorum rerum ipsa laboriosam odio",
      "userId": 2,
      "user": null
    },
    {
      "id": 17,
      "title": "fugit voluptas sed molestias voluptatem provident",
      "userId": 2,
      "user": null
    },
    {
      "id": 18,
      "title": "voluptate et itaque vero tempora molestiae",
      "userId": 2,
      "user": null
    },
    {
      "id": 19,
      "title": "adipisci placeat illum aut reiciendis qui",
      "userId": 2,
      "user": null
    },
    {
      "id": 20,
      "title": "doloribus ad provident suscipit at",
      "userId": 2,
      "user": null
    },
    {
      "id": 21,
      "title": "asperiores ea ipsam voluptatibus modi minima quia sint",
      "userId": 3,
      "user": null
    },
    {
      "id": 22,
      "title": "dolor sint quo a velit explicabo quia nam",
      "userId": 3,
      "user": null
    },
    {
      "id": 23,
      "title": "maxime id vitae nihil numquam",
      "userId": 3,
      "user": null
    },
    {
      "id": 24,
      "title": "autem hic labore sunt dolores incidunt",
      "userId": 3,
      "user": null
    },
    {
      "id": 25,
      "title": "rem alias distinctio quo quis",
      "userId": 3,
      "user": null
    },
    {
      "id": 26,
      "title": "est et quae odit qui non",
      "userId": 3,
      "user": null
    },
    {
      "id": 27,
      "title": "quasi id et eos tenetur aut quo autem",
      "userId": 3,
      "user": null
    },
    {
      "id": 28,
      "title": "delectus ullam et corporis nulla voluptas sequi",
      "userId": 3,
      "user": null
    },
    {
      "id": 29,
      "title": "iusto eius quod necessitatibus culpa ea",
      "userId": 3,
      "user": null
    },
    {
      "id": 30,
      "title": "a quo magni similique perferendis",
      "userId": 3,
      "user": null
    },
    {
      "id": 31,
      "title": "ullam ut quidem id aut vel consequuntur",
      "userId": 4,
      "user": null
    },
    {
      "id": 32,
      "title": "doloremque illum aliquid sunt",
      "userId": 4,
      "user": null
    },
    {
      "id": 33,
      "title": "qui explicabo molestiae dolorem",
      "userId": 4,
      "user": null
    },
    {
      "id": 34,
      "title": "magnam ut rerum iure",
      "userId": 4,
      "user": null
    },
    {
      "id": 35,
      "title": "id nihil consequatur molestias animi provident",
      "userId": 4,
      "user": null
    },
    {
      "id": 36,
      "title": "fuga nam accusamus voluptas reiciendis itaque",
      "userId": 4,
      "user": null
    },
    {
      "id": 37,
      "title": "provident vel ut sit ratione est",
      "userId": 4,
      "user": null
    },
    {
      "id": 38,
      "title": "explicabo et eos deleniti nostrum ab id repellendus",
      "userId": 4,
      "user": null
    },
    {
      "id": 39,
      "title": "eos dolorem iste accusantium est eaque quam",
      "userId": 4,
      "user": null
    },
    {
      "id": 40,
      "title": "enim quo cumque",
      "userId": 4,
      "user": null
    },
    {
      "id": 41,
      "title": "non est facere",
      "userId": 5,
      "user": null
    },
    {
      "id": 42,
      "title": "commodi ullam sint et excepturi error explicabo praesentium voluptas",
      "userId": 5,
      "user": null
    },
    {
      "id": 43,
      "title": "eligendi iste nostrum consequuntur adipisci praesentium sit beatae perferendis",
      "userId": 5,
      "user": null
    },
    {
      "id": 44,
      "title": "optio dolor molestias sit",
      "userId": 5,
      "user": null
    },
    {
      "id": 45,
      "title": "ut numquam possimus omnis eius suscipit laudantium iure",
      "userId": 5,
      "user": null
    },
    {
      "id": 46,
      "title": "aut quo modi neque nostrum ducimus",
      "userId": 5,
      "user": null
    },
    {
      "id": 47,
      "title": "quibusdam cumque rem aut deserunt",
      "userId": 5,
      "user": null
    },
    {
      "id": 48,
      "title": "ut voluptatem illum ea doloribus itaque eos",
      "userId": 5,
      "user": null
    },
    {
      "id": 49,
      "title": "laborum non sunt aut ut assumenda perspiciatis voluptas",
      "userId": 5,
      "user": null
    },
    {
      "id": 50,
      "title": "repellendus qui recusandae incidunt voluptates tenetur qui omnis exercitationem",
      "userId": 5,
      "user": null
    },
    {
      "id": 51,
      "title": "soluta aliquam aperiam consequatur illo quis voluptas",
      "userId": 6,
      "user": null
    },
    {
      "id": 52,
      "title": "qui enim et consequuntur quia animi quis voluptate quibusdam",
      "userId": 6,
      "user": null
    },
    {
      "id": 53,
      "title": "ut quo aut ducimus alias",
      "userId": 6,
      "user": null
    },
    {
      "id": 54,
      "title": "sit asperiores ipsam eveniet odio non quia",
      "userId": 6,
      "user": null
    },
    {
      "id": 55,
      "title": "sit vel voluptatem et non libero",
      "userId": 6,
      "user": null
    },
    {
      "id": 56,
      "title": "qui et at rerum necessitatibus",
      "userId": 6,
      "user": null
    },
    {
      "id": 57,
      "title": "sed ab est est",
      "userId": 6,
      "user": null
    },
    {
      "id": 58,
      "title": "voluptatum itaque dolores nisi et quasi",
      "userId": 6,
      "user": null
    },
    {
      "id": 59,
      "title": "qui commodi dolor at maiores et quis id accusantium",
      "userId": 6,
      "user": null
    },
    {
      "id": 60,
      "title": "consequatur placeat omnis quisquam quia reprehenderit fugit veritatis facere",
      "userId": 6,
      "user": null
    },
    {
      "id": 61,
      "title": "voluptatem doloribus consectetur est ut ducimus",
      "userId": 7,
      "user": null
    },
    {
      "id": 62,
      "title": "beatae enim quia vel",
      "userId": 7,
      "user": null
    },
    {
      "id": 63,
      "title": "voluptas blanditiis repellendus animi ducimus error sapiente et suscipit",
      "userId": 7,
      "user": null
    },
    {
      "id": 64,
      "title": "et fugit quas eum in in aperiam quod",
      "userId": 7,
      "user": null
    },
    {
      "id": 65,
      "title": "consequatur id enim sunt et et",
      "userId": 7,
      "user": null
    },
    {
      "id": 66,
      "title": "repudiandae ea animi iusto",
      "userId": 7,
      "user": null
    },
    {
      "id": 67,
      "title": "aliquid eos sed fuga est maxime repellendus",
      "userId": 7,
      "user": null
    },
    {
      "id": 68,
      "title": "odio quis facere architecto reiciendis optio",
      "userId": 7,
      "user": null
    },
    {
      "id": 69,
      "title": "fugiat quod pariatur odit minima",
      "userId": 7,
      "user": null
    },
    {
      "id": 70,
      "title": "voluptatem laborum magni",
      "userId": 7,
      "user": null
    },
    {
      "id": 71,
      "title": "et iusto veniam et illum aut fuga",
      "userId": 8,
      "user": null
    },
    {
      "id": 72,
      "title": "sint hic doloribus consequatur eos non id",
      "userId": 8,
      "user": null
    },
    {
      "id": 73,
      "title": "consequuntur deleniti eos quia temporibus ab aliquid at",
      "userId": 8,
      "user": null
    },
    {
      "id": 74,
      "title": "enim unde ratione doloribus quas enim ut sit sapiente",
      "userId": 8,
      "user": null
    },
    {
      "id": 75,
      "title": "dignissimos eum dolor ut enim et delectus in",
      "userId": 8,
      "user": null
    },
    {
      "id": 76,
      "title": "doloremque officiis ad et non perferendis",
      "userId": 8,
      "user": null
    },
    {
      "id": 77,
      "title": "necessitatibus quasi exercitationem odio",
      "userId": 8,
      "user": null
    },
    {
      "id": 78,
      "title": "quam voluptatibus rerum veritatis",
      "userId": 8,
      "user": null
    },
    {
      "id": 79,
      "title": "pariatur consequatur quia magnam autem omnis non amet",
      "userId": 8,
      "user": null
    },
    {
      "id": 80,
      "title": "labore in ex et explicabo corporis aut quas",
      "userId": 8,
      "user": null
    },
    {
      "id": 81,
      "title": "tempora rem veritatis voluptas quo dolores vero",
      "userId": 9,
      "user": null
    },
    {
      "id": 82,
      "title": "laudantium voluptate suscipit sunt enim enim",
      "userId": 9,
      "user": null
    },
    {
      "id": 83,
      "title": "odit et voluptates doloribus alias odio et",
      "userId": 9,
      "user": null
    },
    {
      "id": 84,
      "title": "optio ipsam molestias necessitatibus occaecati facilis veritatis dolores aut",
      "userId": 9,
      "user": null
    },
    {
      "id": 85,
      "title": "dolore veritatis porro provident adipisci blanditiis et sunt",
      "userId": 9,
      "user": null
    },
    {
      "id": 86,
      "title": "placeat quia et porro iste",
      "userId": 9,
      "user": null
    },
    {
      "id": 87,
      "title": "nostrum quis quasi placeat",
      "userId": 9,
      "user": null
    },
    {
      "id": 88,
      "title": "sapiente omnis fugit eos",
      "userId": 9,
      "user": null
    },
    {
      "id": 89,
      "title": "sint soluta et vel magnam aut ut sed qui",
      "userId": 9,
      "user": null
    },
    {
      "id": 90,
      "title": "ad iusto omnis odit dolor voluptatibus",
      "userId": 9,
      "user": null
    },
    {
      "id": 91,
      "title": "aut amet sed",
      "userId": 10,
      "user": null
    },
    {
      "id": 92,
      "title": "ratione ex tenetur perferendis",
      "userId": 10,
      "user": null
    },
    {
      "id": 93,
      "title": "beatae soluta recusandae",
      "userId": 10,
      "user": null
    },
    {
      "id": 94,
      "title": "qui qui voluptates illo iste minima",
      "userId": 10,
      "user": null
    },
    {
      "id": 95,
      "title": "id minus libero illum nam ad officiis",
      "userId": 10,
      "user": null
    },
    {
      "id": 96,
      "title": "quaerat velit veniam amet cupiditate aut numquam ut sequi",
      "userId": 10,
      "user": null
    },
    {
      "id": 97,
      "title": "quas fugiat ut perspiciatis vero provident",
      "userId": 10,
      "user": null
    },
    {
      "id": 98,
      "title": "laboriosam dolor voluptates",
      "userId": 10,
      "user": null
    },
    {
      "id": 99,
      "title": "temporibus sit alias delectus eligendi possimus magni",
      "userId": 10,
      "user": null
    },
    {
      "id": 100,
      "title": "at nam consequatur ea labore ea harum",
      "userId": 10,
      "user": null
    }
  ]
}
