src/core/jit/synth/snapshots/tailcall__core__jit__synth__synth_borrow__tests__multiple_nested.snap
---
source: src/core/jit/synth/synth_borrow.rs
expression: val
---
{
  "posts": [
    {
      "id": 1,
      "title": "Some Title",
      "user": null
    },
    {
      "id": 2,
      "title": "Not Some Title",
      "user": null
    }
  ],
  "users": [
    {
      "id": 1,
      "name": "Leanne Graham"
    },
    {
      "id": 2,
      "name": "Ervin Howell"
    }
  ]
}
