src/core/jit/synth/snapshots/tailcall__core__jit__synth__synth_borrow__tests__nested.snap
---
source: src/core/jit/synth/synth_borrow.rs
expression: val
---
{
  "posts": [
    {
      "id": 1,
      "title": "Some Title",
      "user": null
    },
    {
      "id": 2,
      "title": "Not Some Title",
      "user": null
    }
  ]
}
