src/core/jit/synth/snapshots/tailcall__core__jit__synth__synth_borrow__tests__posts.snap
---
source: src/core/jit/synth/synth_borrow.rs
expression: val
---
{
  "posts": [
    {
      "id": 1
    },
    {
      "id": 2
    }
  ]
}
