src/core/jit/synth/snapshots/tailcall__core__jit__synth__synth_borrow__tests__user.snap
---
source: src/core/jit/synth/synth_borrow.rs
expression: val
---
{
  "data": {
    "user": {
      "id": 1
    }
  }
}
